Me comi una letra en un apartado

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
           <div>
           <p> <strong> ${provincestate} - ${countryregion}</strong></p>
           <p> <strong> Confirmados: ${confirmed}</strong></p>
-          <p> <strong> Ruertes: ${deaths}</strong></p>
+          <p> <strong> Muertes: ${deaths}</strong></p>
           <p> <strong> Recuperados: ${recovered}</strong></p>
-          <p> <strong> Ultima fecha: ${lastupdate}</strong></p>
+          <p> <strong> Ultima actualizaci&oacute;n: ${lastupdate}</strong></p>
           </div>
           `
       }
