--- a/index.html
+++ b/index.html
@@ -60,13 +60,19 @@
       const popup = new window.google.maps.InfoWindow()
 
       function renderExtraData({confirmed,deaths, recovered,provincestate,countryregion,lastupdate}){
+          var muertos = Number(deaths);
+          var confirmados = Number(confirmed);
+          var recuperados = Number(recovered);
+          var porcentajeMuertes = (muertos/confirmados) * 100;
+          var porcentajeRecuperados = (recuperados/confirmados) * 100;
           return `
           <div>
           <p> <strong> ${provincestate} - ${countryregion}</strong></p>
           <p> <strong> Confirmados: ${confirmed}</strong></p>
           <p> <strong> Muertes: ${deaths}</strong></p>
           <p> <strong> Recuperados: ${recovered}</strong></p>
-          <p> <strong> Porcentaje de muerte en relacion a infectados: ${deaths / confirmed * 100} </strong></p>
+          <p> <strong> Porcentaje de muerte en relaci&oacute;n a confirmados: ${porcentajeMuertes.toFixed(1)}% </strong></p>
+          <p> <strong> Porcentaje de recuperados en relaci&oacute;n a confirmados: ${porcentajeRecuperados.toFixed(1)}% </strong></p>
           <p> <strong> Ultima actualizaci&oacute;n: ${lastupdate}</strong></p>
           </div>
           `
